Java 17/ fix build antlr/scheletro Microlanguage